--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
     "next": "^12.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
