--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "graphql-request": "^4.3.0",
     "next": "^12.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.43",
