--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.12",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "sass": "^1.52.3",
     "typescript": "^4.7.3"
   }
 }
