--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "next": "^12.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.3"
+    "react-markdown": "^8.0.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.43",
     "@types/react": "^18.0.12",
+    "@types/react-syntax-highlighter": "^15.5.2",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "sass": "^1.52.3",
