--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "feed": "^4.2.2",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "next": "^12.2.2",
